public/bootstrap/less/trp2.less
/* ... */
/* creates the smaller  triangle */
.trpChatBubble.local:after {
  top:11px; /* value = (:before top) + (:before border-top) - (:after border-top) */
  bottom:auto;
  left:-4px; /* value = - border-left-width - border-right-width */
  border-width:14px 5px 14px 0;
  border-color:transparent @trpOffWhite;
}

/* Variant : right
------------------------------------------ */

/* creates the larger triangle */
.trpChatBubble.remote:before {
  top:10px; /* controls vertical position */
  bottom:auto;
    left:auto;
  right:-5px; /* value = - border-left-width - border-right-width */
  border-width:15px 0 15px 5px;
  border-color:transparent @trpLightGrey;
}

/* creates the smaller  triangle */
.trpChatBubble.remote:after {
  top:11px; /* value = (:before top) + (:before border-top) - (:after border-top) */
  bottom:auto;
    left:auto;
  right:-4px; /* value = - border-left-width - border-right-width */
  border-width:14px 0 14px 5px;
  border-color:transparent @trpOffWhite;
}

.trpChatPictureLocal {
  float: left;
  padding-right: 20px;
  padding-left: 20px;
}

.trpChatPictureRemote {
  float: right;
  padding-right: 20px;
  padding-left: 20px;
}

.trpChatRemote {
  text-align:right; 
}

.trpFileViewContainer {
  padding-top: 12px;
}

.trpFileViewItem {
  float: left;
  padding-bottom: 40px;
  padding-left: 20px;
  padding-right: 20px;
}

.trpFileThumbnail {
  border: 1px solid @trpLightGrey;
  float: right;
  width: 180px;
  height: 180px;
}

.trpFileDetails {
  width: 100%;
}

.trpFilename {
  margin-top: 5px;
  float: left;
  height: 20px;
  color: @trpDarkGrey;
  .trpBodySmall;
  width: 150px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.trpFileActionMenuButton {
  margin-top: 5px;
  padding: 5px 10px 5px 10px;
  float: right;
  border-left: 1px solid @trpLightGrey;
}

.trpFileActionMenu {
  display: none;
  position: absolute;
  z-index: 3;
  float: right;
  clear: both;
  margin-top: 186px;
  margin-left:86px;
  width: 96px;
  .trpShadow;
}

.trpFileActionMenuTop {
  display: none;
  margin-left: 56px;
  width: 20px;
  height: 20px;
  border: 0;
}

.trpFileActionMenuBottom {
  display: none;
  width: 96px;
  background: @trpOffWhite;
}

.trpFileActionMenuItem {
  color: @trpDarkGrey;
  padding: 5px 0px 5px 10px;
  .trpBodySmall;
}

.trpFileActionMenuItem a {
  text-decoration: none;
  color: @trpDarkGrey;
}

.trpFileActionMenuItem a:hover {
  text-decoration: none;
  color: @trpGreen;
}

.trpFileActionMenuItem:hover {
  color: @trpGreen;
  background-color: white;
}

.trpFileUploadContainer {
  .trpSectionViewHeader;
}

.trpFileUploadArea {
  position:absolute; 
  top:0;  
  width:620px; 
  height:100%;
  width: 100%;
  z-index:2;
  .trpH4;
  margin-top: 15px;
  padding-left: 20px;
  padding-top: 10px;
}

.trpFileToolbar {
  padding-bottom: 8px;
}

.trpFileSorter {
  float: left;
  padding-left: 20px;
  .trpBodySmall;
}


.trpFileViewer {
}

.trpFileViewIcon {
  padding-left: 8px;
}

.trpMailButton {

}

.trpMailRowContainer {
  border-bottom: 1px solid @trpOffWhite;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 20px;
}


.trpMailRowContainer:hover {
  background-color: @trpOffWhite;
  cursor: pointer;
}

.trpMailRow {

}


.trpMailDisplayPicture {
  padding-left: 40px;
  padding-right: 20px;
  float: left;
}


.trpMailFromSubject {
  .trpH2;
  height: 23px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding-bottom: 0px;
}

.trpMailPreview {
  .trpBodyText;
  color: @trpDarkGrey;
  height: 40px;
  overflow: hidden;
  margin-top: -4px;
}

.trpMailIcons {
  float: left;
  width: 18px;
  height: 16px;
  padding: 0 20px 0 20px;
}

.trpMailDate {
  float: left;
  .trpBodyText;
  color: @trpDarkGrey;
}

.trpMailLeft {
  display:inline-block;
  width: 80%;

}

.trpMailRight {
  display:inline-block;
  float: right;
}

.trpMailBackButton {
  padding-left: 32px;
}

.trpMailBody {
  padding-left: 88px;
  .trpBodyText;
}


.trpPeopleHeader {
  float: left;
  padding-top: 10px;
  padding-left: 20px;
  .trpH4;
}

.trpPeopleTab {
  float: left;
  padding-left: 40px;
  min-height: 100%;
}

.trpPeopleViewItem {
  float: left;
  padding: 0px 10px 40px 40px;
  min-width: 240px;
}

.trpPersonAvatar {
  float: left;
}

.trpPersonDetails {
  float: left;
  padding-left: 20px;
}

.trpPersonName {
  .trpH3;
  color: black;
}

.trpPersonAction {
  .trpBodySmall;
  color: @trpDarkGrey;
  float: left;
  clear: none;
  padding-right: 12px;
}

.trpPersonAction:hover {
  color: @trpGreen;
  cursor: pointer;
}

.trpSpace24 {
  margin-right: 20px;
}

.trpPadV14 {
  padding-top: 14px;
  padding-bottom: 14px;
}

.trpButton {
  color: @trpDarkGrey;
  border: 1px solid @trpLightGrey;
  .trpBodySmall;
  padding: 5px 10px 5px 10px;
  display: inline-block;
  -webkit-border-radius:3px;
  -moz-border-radius:3px;
  border-radius:3px;
  background-color: white;
  cursor: pointer;
}

.trpButtonBig {
  -webkit-border-radius:3px;
  -moz-border-radius:3px;
  border-radius:3px;
  padding: 14px 8px 14px 8px;
  text-align: center;
  min-width: 76px;
  .trpBodySmall;
  text-decoration: none;
  border: none;
}

.trpBtnWhite {
  background-color: white;
  color: @trpPurple;
}

.trpWhite {
  color: white;
}

.trpBtnGreen {
  background-color: @trpGreen;
  color: white;
}

.trpDisplayPicture{
  -webkit-border-radius: 50em;
  -moz-border-radius: 50em;
  border-radius: 50em;
  /*border: solid thin #dcdcdc;*/
  background-color: transparent;
}

.trpNewLine {
  clear: both;
}

.trpTabItem a {
  text-decoration: none;
}

.trpTabItem {
  .trpBodyText;
  color: @trpDarkGrey;
}

.trpTabItem.active {
  color: @trpGreen;
}

.nav-tabs > .active > a, {
  color: @trpGreen;
}

.trpTabActive {
  border-top: 1px solid @trpLightGrey;
  border-left: 1px solid @trpLightGrey;
  border-right: 1px solid @trpLightGrey;
  border-bottom: 1px solid @trpOffWhite;
  color: @trpGreen;
  padding-bottom: 20px;
  cursor: default;
}
/* ... */

